Fixed a bug that was causing the terminal report to have the list of reaches overflow onto the bottom of the page.
* List of reaches is now in a scrollable list, so it does not take up so much space.
* Updated the newer 'book' template for the report.
* Fixed the template to correctly load images, even if page is not at root.
* Updated max width of template to be wider to accommodate wide tables.
* Report uses the area a bit better (less padding).


Former-commit-id: fb81a7ece7bd6c370be1522c4de7764c2a60490f

--- a/sparrow-web-ui/src/main/webapp/css/layout.css
+++ b/sparrow-web-ui/src/main/webapp/css/layout.css
@@ -23,8 +23,8 @@ body {
 #sizer {
 	margin: 0 auto 0 auto;
 	padding: 0;
-	width: 78%;
-	max-width: 500px;  /* version for IE is at the bottom of this style block */
+	width: 80%;
+	max-width: 800px;  /* version for IE is at the bottom of this style block */
 }
 
 #expander {
