--- a/sparrow-web-ui/src/main/webapp/report/style/report.css
+++ b/sparrow-web-ui/src/main/webapp/report/style/report.css
@@ -1,4 +1,3 @@
-body { background-color: #ffe; }
 
 .content { position: relative; }
 .content h1, .content h2, .content h3, content h4 { text-align: center; }
@@ -54,12 +53,17 @@ Head Section */
 .explanation p { margin: .2em 0; }
 
 .columns-2 { border: solid 1px #000; border-left: none; width: auto; }
-.column { border-left: solid 1px #000; background-color:transparent !important; }
+.columns-2 .column { border-left: solid 1px #000; background-color:transparent !important; }
 
 .to-and-from-area { }
+
+/* jquery adds backgrounds and padding to these, which breaks the visual format*/
+#tabs, .report-container { background: none !important; background-color: transparent !important; }
+.ui-tabs-panel { padding: .1em .2em .1em .1em !important; }
+
 .report-container .controls { width: 100%;}
-.from-aggregate-area { background-color: #fff; }
-.to-downstream-reaches-area { background-color: #fff; }
+.from-aggregate-area { background-color: transparent; }
+.to-downstream-reaches-area { background-color: transparent; }
 .column .content { padding: 0 .4em; }
 .export-area { clear: both; }
 .downstream-reaches-out-of-sync {
@@ -81,7 +85,6 @@ Head Section */
 .report-load-status {
 	display: none; /* Only shown when code turns it on */
 	position: absolute;	top: 0; left: 0; width: 100%; height: 100%; padding: 0;
-	background-color: #fff;
 }
 .report-load-status .message { text-align: center; }
 
@@ -105,7 +108,7 @@ Relative percentage cells */
 td.rel-percent-in-col { padding: 0; }
 
 .rel-percent-in-col div {
- float: right; height: 100%; margin: 0; padding: 1.2em 0;
+ float: right; height: 100%; margin: 0 0 1px 0; padding: 1.2em 0;
  background-color: #ffc;  border-left: solid 1px #000;
 }
 
@@ -118,14 +121,14 @@ rel-percent-in-row div {
 
 .rel-percent-in-row span { overflow: visible; float: right; padding: 0 .2em; }
 
-/* Uses the 'off left' technique to hide
+/* Uses the 'off right' technique to hide
  * unused tabs instead of the 'display none' technique.
  * This allows animations (in particular show / hide)
  * to work correctly on hidden tabs.
  */
 .ui-tabs .ui-tabs-hide {
     position: absolute;
-    left: -10000px;
+    right: 90000px;
 		display: block !important;
 }
 
